# SDL3-stb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-make-gcc.sh  build-msvc.bat  build-ninja-gcc.sh
3rd/: CMakeLists.txt  README.md
game/: CMakeLists.txt  all_3rd.h  files.c  files.h  image.c  image.h  main.c  main.h  text.c  text.h
resources/: README.md  resources_font.h  resources_font_gz.h  resources_jpg.h  resources_jpg_gz.h
